--- a/eureka-service/eureka.yml
+++ b/eureka-service/eureka.yml
@@ -14,5 +14,5 @@ eureka:
       defaultZone: http://localhost:8763/eureka/
   dashboard:
     enabled: true
-  datacenter: seatle1
+  datacenter: local
   environment: develop
